syntax = "proto3";

package calculator;
option go_package="/calculator/calculatorpb";

message Operands {
    int32 first_op = 1;
    int32 second_op = 2;
}

message CalculatorRequest {
    Operands opearnds = 1;
}

message calculatorResponse {
    int32 result = 1;
}

service calculatorService {
    rpc calculate(CalculatorRequest) returns (calculatorResponse) {};
}